--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -6,9 +6,6 @@
 #messagesCardContent {
   overflow-y: auto;
 }
-/*#messagesCard {
-  overflow-y: scroll;
-}*/
 
 #formCard {
   height: 100%;
@@ -48,3 +45,22 @@
   font-size: 12px;
   line-height: 33px;
 }
+
+/*in case we want to change scrollbar styling*/
+/*
+#messagesCardContent::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	background-color: #F5F5F5;
+}
+
+#messagesCardContent::-webkit-scrollbar
+{
+	width: 6px;
+	background-color: #F5F5F5;
+}
+
+#messagesCardContent::-webkit-scrollbar-thumb
+{
+	background-color: #000000;
+}*/
