--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -47,7 +47,7 @@
 }
 
 /*in case we want to change scrollbar styling*/
-/*
+
 #messagesCardContent::-webkit-scrollbar-track
 {
 	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
@@ -63,4 +63,4 @@
 #messagesCardContent::-webkit-scrollbar-thumb
 {
 	background-color: #000000;
-}*/
+}
