front-end updates

--- a/public/css/logIn.css
+++ b/public/css/logIn.css
@@ -1,8 +1,30 @@
-.nav-wrapper {
-	background-color: #212121 ;
-	
-}
 
-.container {
-	background-color: grey;
-}
+
+ body {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+    
+    margin: 0 5% 0 5%;
+  }
+
+  .onlyForColor {
+
+  }
+
+  main {
+    flex: 1 0 auto;
+    background-color: #b0bec5;
+  
+  }
+  h3,h4 {
+  	color: white;
+  }
+
+  .spacer {
+  	height: 50px;
+  	background-color: white;
+
+  }
+
+
