--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -1,3 +1,24 @@
+main {
+    flex: 1 0 auto;
+    background-color: #b0bec5;
+  
+  }
+
+  body {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+    
+    margin: 0 5% 0 5%;
+  }
+
+.spacer {
+    height: 50px;
+    background-color: white;
+
+  }
+
+
 #messages {
   overflow-y: auto;
   margin-bottom: 10px;
@@ -51,7 +72,7 @@
 #messagesCardContent::-webkit-scrollbar-track
 {
 	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-	background-color: #F5F5F5;
+	background-color: blue-grey-lighten;
 }
 
 #messagesCardContent::-webkit-scrollbar
@@ -63,4 +84,12 @@
 #messagesCardContent::-webkit-scrollbar-thumb
 {
 	background-color: #000000;
+}
+
+h4 {
+  color: white;
+}
+
+#sendMsg {
+  background: #ff6d00;
 }
