--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -1,3 +1,23 @@
+main {
+    flex: 1 0 auto;
+    /*background-color: #b0bec5;*/
+  
+  }
+
+  body {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+    
+    margin: 0 5% 0 5%;
+  }
+
+.spacer {
+    height: 50px;
+    background-color: white;
+  }
+
+
 #messages {
   overflow-y: auto;
   margin-bottom: 10px;
@@ -51,7 +71,7 @@
 #messagesCardContent::-webkit-scrollbar-track
 {
 	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-	background-color: #F5F5F5;
+	/*background-color: blue-grey-lighten;*/
 }
 
 #messagesCardContent::-webkit-scrollbar
@@ -64,3 +84,94 @@
 {
 	background-color: #000000;
 }
+
+h4 {
+  color: black;
+  font-size: 24px;
+}
+
+#sendMsg {
+  background: #ff6d00;
+}
+
+.input-field input[type=text]:focus + label {
+  color: #ff6d00;
+}
+
+.input-field .prefix.active{
+  color: #ff6d00 ;
+}
+
+
+.input-field input[type=text]:focus {
+  border-bottom: 1px solid #ff6d00  ;
+  box-shadow: 0 1px 0 0 #ff6d00  ;
+}
+
+
+
+/*#messages {
+  overflow-y: auto;
+  margin-bottom: 10px;
+  height: calc(100%);
+}
+#messagesCardContent {
+  overflow-y: auto;
+}
+
+#formCard {
+  height: 100%;
+}
+
+#formCardContent {
+  padding-top:5px;
+  padding-bottom: 0px
+}
+  
+#messagesCardRow {
+  margin-bottom: 0px;
+  padding: 0;
+}
+
+#messagesCard {
+  margin-bottom: 0px;
+}
+
+#btnDiv {
+  padding-top: 4%;
+  float: right;
+}
+
+#inputField {
+  padding-right: 0px;
+}
+
+.message-container {
+  border-bottom: 1px solid black;
+  margin-bottom:5px;
+}
+
+.name {
+  font-style: italic;
+  color: rgba(208, 215, 226, .7);
+  font-size: 12px;
+  line-height: 33px;
+}
+
+
+#messagesCardContent::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	background-color: #F5F5F5;
+}
+
+#messagesCardContent::-webkit-scrollbar
+{
+	width: 6px;
+	background-color: #F5F5F5;
+}
+
+#messagesCardContent::-webkit-scrollbar-thumb
+{
+	background-color: #000000;
+}*/
