changed font color

--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -59,12 +59,12 @@ main {
 
 .message-container {
   border-bottom: 1px solid black;
-  margin-bottom:5px;
+  margin-bottom:5px;sour
 }
 
 .name {
   font-style: italic;
-  color: rgba(208, 215, 226, .7);
+  color: rgba(0, 0, 0, .7);
   font-size: 12px;
   line-height: 33px;
 }
